k8s/service-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  namespace: geostreamdb
spec:
  selector:
    app: alertmanager
  ports:
  - name: http
    port: 9093
    targetPort: 9093
