k8s/service-docker-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-exporter-service
  namespace: geostreamdb
spec:
  selector:
    app: docker-exporter
  ports:
  - name: http
    port: 8080
    targetPort: 8080
