k8s/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: geostreamdb
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
    targetPort: 3000
