k8s/service-node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: geostreamdb
spec:
  selector:
    app: node-exporter
  ports:
  - name: http
    port: 9100
    targetPort: 9100
