k8s/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: geostreamdb
spec:
  selector:
    app: prometheus
  ports:
  - name: http
    port: 9090
    targetPort: 9090
